# NAS_LLM

./: .gitignore  README.md  analize_result.ipynb  config.py  main.py  nas-informer.ipynb  optimize.py  pyproject.toml  requirements.txt  test_functions.ipynb
Informer2020/exp/: exp_informer.py
examples/: lm-searcher.ipynb
experiments/: pred_len=24;th_b=2048.json  pred_len=24;th_b=8192;hypot.json  pred_len=48;th_b=8192;hypot.json
experiments/llm_opt/etth1/: ETTh1-grid12_pred_len=24;th_b=8192;hypot.json  ETTh1-grid12_pred_len=48;th_b=8192;hypot.json  ETTh1-grid3_pred_len=168;th_b=8192;hypot.json  ETTh1-grid3_pred_len=24;th_b=8192;hypot.json  ETTh1-grid3_pred_len=48;th_b=8192;hypot.json  pred_len=168;th_b=8192;hypot.json  pred_len=24;th_b=2048.json  pred_len=24;th_b=8192;hypot.json
experiments/llm_opt/etth2/: ETTh2-grid12_pred_len=48;th_b=8192;hypot.json  ETTh2-grid3_pred_len=168;th_b=8192;hypot.json  ETTh2-grid3_pred_len=24;th_b=8192;hypot.json  (+3 more)
experiments/old/: pred_len=24;th_b=2048.json  pred_len=48;th_b=8192;hypot.json
llm_opt_toolkit/: __init__.py  llm.py  llm_requester.py  llm_requests.py  optimization_journal.py  optimizator.py  prompt_builder.py  prompting.py  train.py
notebooks/: analyze_result1.ipynb  analyze_result_1_5.ipynb  llm_optimization.ipynb  simple_eda.ipynb  test_functions.ipynb
notebooks/optuna experiments/: optuna_informer_ETTh1_pred_len=168.ipynb  optuna_informer_ETTh1_pred_len=48.ipynb  optuna_informer_ETTh2_pred_len=168.ipynb  optuna_informer_ETTh2_pred_len=48.ipynb
src/: config.py  optimization_journal.py  prompting.py  train.py
(+8 files in other folders)
